Revision history for perl module JIRA-REST. -*- text -*-

{{$NEXT}}

0.012     2016-01-15 22:16:02-02:00 America/Sao_Paulo

  [Fix]

  - Remove dependency on Data::Util.

0.011     2015-05-21 19:10:57-03:00 America/Sao_Paulo

  [New feature]

  - Add support for connecting to JIRA via a HTTP proxy.

  [Fix]

  - Recognize and output JIRA errors produced in XML format.

0.010     2014-11-08 12:54:50 America/Sao_Paulo

  [New features]

  - Add utility method 'attach_files'.

  [Changes]

  - Prints any textual error message, not just of types text/plain and
    text/html.

0.009     2014-09-09 20:32:15 America/Sao_Paulo

  [Fixes]

  - Fix the set_search_iterator/next_issue pair of methods.

  [Changes]

  - The iterators now use JIRA's own default (which is 50) when the
    'maxResults' argument isn't set. Previously our default was set to 256.

0.008     2014-09-06 19:14:06 America/Sao_Paulo

  [Changes]

  - Show every detail in JIRA error messages. Some of which weren't being
    shown before. (Thanks to Michael Kröll for the tip.)

0.006     2014-08-16 20:50:07 America/Sao_Paulo

  [Changes]

  - Suppress script line numbers from error messages.

  - Released on #cpanday.

0.005     2014-08-07 20:25:14 America/Sao_Paulo

  [Changes]

  - New utility methods 'set_search_iterator' and 'next_issue' make it
    easier to iterate through large sets of issues without having to deal
    with "pagination".

  - Error messages are not presented in a consistent format. JIRA errors are
    parsed and presented in a legible way.

0.004     2013-12-14 14:54:06 America/Sao_Paulo

  [Fixes]

  - [RT-91368] Some resource responses contain no content but specify
    a Content-Type. Those were being considered errors. Now they
    simply return undef.

  - When a resource response contains a content but doesn't specify a
    Content-Type it's an error. Previously it was returning undef.

0.003     2013-09-03 17:32:02 America/Sao_Paulo
  [Fixes]
  - Fix code in documentation.
